[tool.poetry]
name = "pycliputil"
version = "0.1.0"
description = ""
authors = ["John te Bokkel <tanj.tanj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
